# GoldenRatioSampling

./: README.md  cartesian.py  goldensampling.py  pyproject.toml  sampling.py  test.py
goldenratiosampling/: integration.py  sampling.py
goldensampling/: goldensampling.py  integration.py  sampling.py
