[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build

[project]
name = "golden-ratio-sampling"
version = "0.0.1"
description = "Quasirandom sampling scheme based on multidimensional golden ratio's."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ProodjePindakaas/GoldenRatioSampling"
"Bug Tracker" = "https://github.com/ProodjePindakaas/GoldenRatioSampling/issues"
